# Syncer

./: Cargo.toml
syncer-client/: Cargo.toml
syncer-client/src/: cmd.rs  diffing.rs  main.rs
syncer-common/: Cargo.toml
syncer-common/src/: lib.rs  snapshot.rs
syncer-server/: Cargo.toml
syncer-server/src/: cmd.rs  main.rs  server.rs
syncer-server/src/server/: fs.rs  mod.rs
