[package]
name = "syncer-server"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "CLI server for Syncer"

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.17", default-features = false, features = [
    "http1",
    "tokio",
    "json",
    "query",
] }
clap = { version = "4.2.5", features = ["derive"] }
futures-util = "0.3.28"
tokio = { version = "1.28.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["std", "fmt"] }
syncer-common = { path = "../syncer-common" }
serde = { version = "1.0.160", features = ["derive"] }
filetime = "0.2.21"
